# lumen2

./: .gitignore  pyproject.toml  readme.md  硬件连接.md
backend/calibrate/: __init__.py  _shared.py  calibrate.py  calibrate_control.py  calibrate_model.py  diagnose_alignment.py  readme.md
backend/interface/: __init__.py  matlab_bridge.py  readme.md
backend/interface/OSA/: __init__.py  osa_interface.py  wavelength_sweep.m
backend/interface/VoltageSource/: SWEEP_SiliconExtreme.m  SiliconExtreme.m  __init__.py  silicon_extreme_api.m  voltage_source_interface.py
backend/model/: __init__.py  readme.md  simulate.py
backend/model/MATLAB/: ramzi.m
backend/model/YAML/: ramzi.yml  ramzi_fast_scan.yml
backend/optimize/: __init__.py  optimize.py  reachability.py  readme.md
backend/utils/: __init__.py  complex_response_viewer.py
quicktest/: hardware_interface_smoke.m  osa_direct_smoke.m  ramzi_model.py  ramzi_parameter_identifier.py  ramzi_spectrum_simulator.py
